--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,4 +7,4 @@ sample application.
 </h2>
 <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<%= link_to image_tag("rails.png", alt: "Rails", size: "60x60"), 'http://rubyonrails.org/' %>
