--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@ by Michael Hartl
 <nav>
 <ul>
 <li><%= link_to "About", '#' %></li>
-<li><%= link_to "Contact", '#' %></li>
+<li><%= link_to "Contact", contact_path %></li>
 <li><a href="http://news.railstutorial.jp/">News</a></li>
 </ul>
 </nav>
